compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_call_argument_with_bit_array.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "import gleam/io\n\npub fn main() {\n  io.debug(<<3:size(8)>>)\n}"
---
----- BEFORE ACTION
import gleam/io

pub fn main() {
  io.debug(<<3:size(8)>>)
           ▔↑            
}


----- AFTER ACTION
import gleam/io

const bit_array = <<3:size(8)>>

pub fn main() {
  io.debug(bit_array)
}
