compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_call_argument_with_int.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "import gleam/list\n\npub fn main() {\n  list.sample([4, 5, 6], 2)\n}"
---
----- BEFORE ACTION
import gleam/list

pub fn main() {
  list.sample([4, 5, 6], 2)
                         ↑ 
}


----- AFTER ACTION
import gleam/list

const int = 2

pub fn main() {
  list.sample([4, 5, 6], int)
}
