compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_call_argument_with_nested_outside.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "import gleam/list\n\npub fn main() {\n  list.unzip([#(1, 2), #(3, 4)])\n}"
---
----- BEFORE ACTION
import gleam/list

pub fn main() {
  list.unzip([#(1, 2), #(3, 4)])
             ↑                  
}


----- AFTER ACTION
import gleam/list

const values = [#(1, 2), #(3, 4)]

pub fn main() {
  list.unzip(values)
}
