compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_declaration_of_nested_inside.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 4366
expression: "pub fn main() {\n  let c = #([1, 2, 3], [3, 2, 1])\n}"
snapshot_kind: text
---
----- BEFORE ACTION
pub fn main() {
  let c = #([1, 2, 3], [3, 2, 1])
            ↑                    
}


----- AFTER ACTION
const ints = [1, 2, 3]

pub fn main() {
  let c = #(ints, [3, 2, 1])
}
