compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_declaration_of_nested_outside.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  let c = #([1, 2, 3], [3, 2, 1])\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = #([1, 2, 3], [3, 2, 1])
          ▔↑                     
}


----- AFTER ACTION
const value = #([1, 2, 3], [3, 2, 1])

pub fn main() {
  let c = value
}
